--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 
-/venv
+venv/
 .idea/
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules/
 /.pnp
 .pnp.js
 
@@ -13,7 +13,7 @@
 /coverage
 
 # production
-/build
+build/
 
 # misc
 .DS_Store
